--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.8",
@@ -36,6 +37,7 @@
     "apollo-server-express": "^3.8.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "graphql": "^15.3.0",
