--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "axios": "^0.27.2",
+    "apollo-link-token-refresh": "^0.4.0",
     "graphql": "^16.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
@@ -49,6 +50,7 @@
     "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "2.4.2",
-    "@graphql-codegen/typescript-react-apollo": "3.2.16"
+    "@graphql-codegen/typescript-react-apollo": "3.2.16",
+    "@types/jwt-decode": "^3.1.0"
   }
 }
